--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,20 +1,27 @@
 {
-  "include": ["client/src/**/*"],
-  "exclude": ["node_modules", "dist"],
+  "include": ["client/src"],
+  "exclude": ["node_modules", "dist", "client/dist"],
   "compilerOptions": {
     "noEmit": true,
     "strict": true,
+
+    "target": "ESNext",
     "module": "ESNext",
     "moduleResolution": "bundler",
-    "target": "ESNext",
-    "lib": ["ESNext", "DOM", "DOM.Iterable"],
+
+    "lib": ["DOM", "DOM.Iterable", "ESNext"],
+
     "jsx": "react-jsx",
-    "skipLibCheck": true,
+
     "esModuleInterop": true,
+    "skipLibCheck": true,
+    "forceConsistentCasingInFileNames": true,
+
     "baseUrl": ".",
     "paths": {
       "@/*": ["client/src/*"]
     },
+
     "types": ["vite/client"]
   }
 }
